--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1699,6 +1699,7 @@
 
 	h2 {
 		font-size: 1.75rem;
+		position: static	;
 	}
 
 	h3 {
@@ -2901,8 +2902,14 @@
 			background-attachment: fixed;
 			background-repeat: no-repeat;
 			background-size: cover;
+			position: relative;
 		}
-
+		.wrapper.style2 .special{
+			color: white;
+		}
+		.wrapper.style2 .special2{
+			color: white;
+		}
 			.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
 				color: #000;
 			}
@@ -3598,6 +3605,7 @@
 
 		.gallery .image {
 			background: #FFF;
+			border-radius: 12px;
 			padding: 1rem;
 		}
 
@@ -3880,37 +3888,50 @@
 	}
 
 /* Menu */
+
 	#menu a.dropdown-arrow:after {
 	content: "\25BE";
 	margin-left: 5px;
+	}
+	#menu ul li .sub-menus:hover{
+		transition: all 0.3s ;
+		
 	}
 	#menu ul.sub-menus{
 		height: auto;
 		overflow: hidden;
 		width: 240px;
 		background: #444444;
-		position: absolute;
+		position: relative;
 		z-index: 99;
 		display: none;
 		border-radius: 12px;
+
+
 	}
 	#menu ul.sub-menus li {
 		display: block;
 		width: 100%;
+
 	}
 	#menu ul.sub-menus a {
 		color: #FFFFFF;
 		text-decoration: none;
 		font-size: 16px;
+		
 	}
 	#menu li:hover ul.sub-menus {
+
 		display: block
+	
 	}
 	#menu ul.sub-menus a:hover{
 		background: #F2F2F2;
 		color: #444444;
 		position: relative;
 		border-radius: 5px;
+		transition: all 0.3s linear;
+	
 	}
 
 	#menu {
@@ -4048,6 +4069,7 @@
 		color: #e2d1df;
 		padding: 8em 0;
 		position: relative;
+		
 	}
 
 		.banner input, .banner select, .banner textarea {
@@ -4113,7 +4135,7 @@
 			z-index: 2;
 		}
 
-		.banner .indicators {
+		/* .banner .indicators {
 			bottom: 1.5em;
 			left: 0;
 			list-style: none;
@@ -4152,7 +4174,7 @@
 
 				.banner .indicators li.visible:before {
 					background: #fff;
-				}
+				} */
 
 		.banner > article {
 			-moz-transition: opacity 1.5s ease, visibility 1.5s;
@@ -4168,7 +4190,7 @@
 			opacity: 0;
 			position: absolute;
 			text-align: center;
-			top: 0;
+			margin-top: 0;
 			visibility: hidden;
 			width: 100%;
 			z-index: 0;
@@ -4205,10 +4227,11 @@
 				}
 
 			.banner > article h2 {
-				font-size: 7rem;
-				margin-bottom: 0;
-				color: #FFF;
-				font-weight: 300;
+				font-size: 4rem;
+				margin: 0;
+				color: white;
+				font-weight: 300px;
+				text-align: center;
 			}
 
 				.banner > article h2:after {
