--- a/assets/css/main_subpage.css
+++ b/assets/css/main_subpage.css
@@ -1812,6 +1812,8 @@
 		border-bottom-color: rgba(144, 144, 144, 0.25);
 	}
 
+
+/*Flecha para hacer la pagina hacia arriba*/
 .ir-arriba{
 	display:none;
 	background-repeat:no-repeat;
@@ -1822,29 +1824,31 @@
 	bottom:10px;
 	right:10px;
 	z-index:2;
-	}
-	
+}
+
 /* Box */
 
 	.box {
-		margin-bottom: 2rem;
-		background: rgba(0, 0, 0, 0.85);
-		
+		margin-bottom: 1.5rem;
+		background: rgba(0, 0, 0, 0.85)
 	}
-
 
 		.box .image.fit {
 			margin: 0;
 			border-radius: 0;
+			max-width: 750px;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+ 
 		}
-
 			.box .image.fit img {
 				border-radius: 0;
+
 			}
 
 		.box header h2 {
 			margin-bottom: 2rem;
-			
 		}
 
 		.box header p {
@@ -1854,7 +1858,8 @@
 			margin: 0 0 .25rem 0;
 			padding: 0 0 .75rem 0;
 			letter-spacing: .25rem;
-			}
+			
+		}
 
 			.box header p:after {
 				content: '';
@@ -1866,8 +1871,6 @@
 				width: 50%;
 				height: 1px;
 				background-color: white;
-
-				
 			}
 
 		.box .content {
@@ -1897,6 +1900,7 @@
 	.box {
 		border-color: rgba(144, 144, 144, 0.25);
 	}
+
 
 /* Button */
 
@@ -2912,231 +2916,232 @@
 				border-color: rgba(255, 255, 255, 0.25);
 			}
 
-			.wrapper.style2 {
-				background-color: #f2f2f2;
-				color: #a6a6a6;
-				background: url(../../images/ayaka.jpg); 	
-				background-repeat: no-repeat;
-				background-attachment: fixed;
-				background-position: center;
-				background-size: cover;
-				position: relative;
-				border: 0px;
+		.wrapper.style2 {
+			background-color: #f2f2f2;
+			color: #a6a6a6;
+			background: url(../../images/ayaka.jpg); 	
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-position: center;
+			background-size: cover;
+			position: relative;
+			border: 0px;
+		}
+		.wrapper.style2 .special{
+			color: white;
+		}
+		.wrapper.style2 .special2{
+			color: white;
+		}
+			.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
+				color: #000;
 			}
-			.wrapper.style2 .special{
+
+			.wrapper.style2 a {
+				color: #8a4680;
+			}
+
+			.wrapper.style2 strong, .wrapper.style2 b {
+				color: #000;
+			}
+
+			.wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3, .wrapper.style2 h4, .wrapper.style2 h5, .wrapper.style2 h6 {
 				color: white;
 			}
-			.wrapper.style2 .special2{
+
+			.wrapper.style2 p {
 				color: white;
 			}
-				.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
-					color: #000;
+
+			.wrapper.style2 blockquote {
+				border-left-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 code {
+				background: rgba(0, 0, 0, 0.075);
+				border-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 hr {
+				border-bottom-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 .box {
+				border-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 input[type="submit"],
+			.wrapper.style2 input[type="reset"],
+			.wrapper.style2 input[type="button"],
+			.wrapper.style2 button,
+			.wrapper.style2 .button {
+				background-color: #000;
+				color: #f2f2f2 !important;
+			}
+
+				.wrapper.style2 input[type="submit"].alt,
+				.wrapper.style2 input[type="reset"].alt,
+				.wrapper.style2 input[type="button"].alt,
+				.wrapper.style2 button.alt,
+				.wrapper.style2 .button.alt {
+					background-color: transparent;
+					box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.15);
+					color: #000 !important;
 				}
-	
-				.wrapper.style2 a {
-					color: #8a4680;
-				}
-	
-				.wrapper.style2 strong, .wrapper.style2 b {
-					color: #000;
-				}
-	
-				.wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3, .wrapper.style2 h4, .wrapper.style2 h5, .wrapper.style2 h6 {
-					color: white;
-				}
-	
-				.wrapper.style2 p {
-					color: white;
-				}
-	
-				.wrapper.style2 blockquote {
-					border-left-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 code {
-					background: rgba(0, 0, 0, 0.075);
-					border-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 hr {
-					border-bottom-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 .box {
-					border-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 input[type="submit"],
-				.wrapper.style2 input[type="reset"],
-				.wrapper.style2 input[type="button"],
-				.wrapper.style2 button,
-				.wrapper.style2 .button {
-					background-color: #000;
-					color: #f2f2f2 !important;
-				}
-	
-					.wrapper.style2 input[type="submit"].alt,
-					.wrapper.style2 input[type="reset"].alt,
-					.wrapper.style2 input[type="button"].alt,
-					.wrapper.style2 button.alt,
-					.wrapper.style2 .button.alt {
-						background-color: transparent;
-						box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.15);
-						color: white !important;
+
+					.wrapper.style2 input[type="submit"].alt:hover,
+					.wrapper.style2 input[type="reset"].alt:hover,
+					.wrapper.style2 input[type="button"].alt:hover,
+					.wrapper.style2 button.alt:hover,
+					.wrapper.style2 .button.alt:hover {
+						background-color: rgba(0, 0, 0, 0.075);
 					}
-	
-						.wrapper.style2 input[type="submit"].alt:hover,
-						.wrapper.style2 input[type="reset"].alt:hover,
-						.wrapper.style2 input[type="button"].alt:hover,
-						.wrapper.style2 button.alt:hover,
-						.wrapper.style2 .button.alt:hover {
-							background-color: rgba(0, 0, 0, 0.075);
-						}
-	
-						.wrapper.style2 input[type="submit"].alt:active,
-						.wrapper.style2 input[type="reset"].alt:active,
-						.wrapper.style2 input[type="button"].alt:active,
-						.wrapper.style2 button.alt:active,
-						.wrapper.style2 .button.alt:active {
-							background-color: rgba(0, 0, 0, 0.2);
-						}
-	
-						.wrapper.style2 input[type="submit"].alt.icon:before,
-						.wrapper.style2 input[type="reset"].alt.icon:before,
-						.wrapper.style2 input[type="button"].alt.icon:before,
-						.wrapper.style2 button.alt.icon:before,
-						.wrapper.style2 .button.alt.icon:before {
-							color: #999999;
-						}
-	
-					.wrapper.style2 input[type="submit"].special,
-					.wrapper.style2 input[type="reset"].special,
-					.wrapper.style2 input[type="button"].special,
-					.wrapper.style2 button.special,
-					.wrapper.style2 .button.special {
-						background-color: #8a4680;
-						color: #ffffff !important;
+
+					.wrapper.style2 input[type="submit"].alt:active,
+					.wrapper.style2 input[type="reset"].alt:active,
+					.wrapper.style2 input[type="button"].alt:active,
+					.wrapper.style2 button.alt:active,
+					.wrapper.style2 .button.alt:active {
+						background-color: rgba(0, 0, 0, 0.2);
 					}
-	
-						.wrapper.style2 input[type="submit"].special:hover,
-						.wrapper.style2 input[type="reset"].special:hover,
-						.wrapper.style2 input[type="button"].special:hover,
-						.wrapper.style2 button.special:hover,
-						.wrapper.style2 .button.special:hover {
-							background-color: #9b4f90;
-						}
-	
-						.wrapper.style2 input[type="submit"].special:active,
-						.wrapper.style2 input[type="reset"].special:active,
-						.wrapper.style2 input[type="button"].special:active,
-						.wrapper.style2 button.special:active,
-						.wrapper.style2 .button.special:active {
-							background-color: #793d70;
-						}
-	
-				.wrapper.style2 label {
-					color: #000;
-				}
-	
-				.wrapper.style2 input[type="text"],
-				.wrapper.style2 input[type="password"],
-				.wrapper.style2 input[type="email"],
-				.wrapper.style2 select,
-				.wrapper.style2 textarea {
-					background: rgba(0, 0, 0, 0.075);
-					border-color: rgba(0, 0, 0, 0.15);
-				}
-	
-					.wrapper.style2 input[type="text"]:focus,
-					.wrapper.style2 input[type="password"]:focus,
-					.wrapper.style2 input[type="email"]:focus,
-					.wrapper.style2 select:focus,
-					.wrapper.style2 textarea:focus {
-						border-color: #8a4680;
-						box-shadow: 0 0 0 1px #8a4680;
+
+					.wrapper.style2 input[type="submit"].alt.icon:before,
+					.wrapper.style2 input[type="reset"].alt.icon:before,
+					.wrapper.style2 input[type="button"].alt.icon:before,
+					.wrapper.style2 button.alt.icon:before,
+					.wrapper.style2 .button.alt.icon:before {
+						color: #999999;
 					}
-	
-				.wrapper.style2 .select-wrapper:before {
-					color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 input[type="checkbox"] + label,
-				.wrapper.style2 input[type="radio"] + label {
-					color: #a6a6a6;
-				}
-	
-					.wrapper.style2 input[type="checkbox"] + label:before,
-					.wrapper.style2 input[type="radio"] + label:before {
-						background: rgba(0, 0, 0, 0.075);
-						border-color: rgba(0, 0, 0, 0.15);
-					}
-	
-				.wrapper.style2 input[type="checkbox"]:checked + label:before,
-				.wrapper.style2 input[type="radio"]:checked + label:before {
+
+				.wrapper.style2 input[type="submit"].special,
+				.wrapper.style2 input[type="reset"].special,
+				.wrapper.style2 input[type="button"].special,
+				.wrapper.style2 button.special,
+				.wrapper.style2 .button.special {
 					background-color: #8a4680;
-					border-color: #8a4680;
-					color: #ffffff;
+					color: #ffffff !important;
 				}
-	
-				.wrapper.style2 input[type="checkbox"]:focus + label:before,
-				.wrapper.style2 input[type="radio"]:focus + label:before {
+
+					.wrapper.style2 input[type="submit"].special:hover,
+					.wrapper.style2 input[type="reset"].special:hover,
+					.wrapper.style2 input[type="button"].special:hover,
+					.wrapper.style2 button.special:hover,
+					.wrapper.style2 .button.special:hover {
+						background-color: #9b4f90;
+					}
+
+					.wrapper.style2 input[type="submit"].special:active,
+					.wrapper.style2 input[type="reset"].special:active,
+					.wrapper.style2 input[type="button"].special:active,
+					.wrapper.style2 button.special:active,
+					.wrapper.style2 .button.special:active {
+						background-color: #793d70;
+					}
+
+			.wrapper.style2 label {
+				color: #000;
+			}
+
+			.wrapper.style2 input[type="text"],
+			.wrapper.style2 input[type="password"],
+			.wrapper.style2 input[type="email"],
+			.wrapper.style2 select,
+			.wrapper.style2 textarea {
+				background: rgba(0, 0, 0, 0.075);
+				border-color: rgba(0, 0, 0, 0.15);
+			}
+
+				.wrapper.style2 input[type="text"]:focus,
+				.wrapper.style2 input[type="password"]:focus,
+				.wrapper.style2 input[type="email"]:focus,
+				.wrapper.style2 select:focus,
+				.wrapper.style2 textarea:focus {
 					border-color: #8a4680;
 					box-shadow: 0 0 0 1px #8a4680;
 				}
-	
-				.wrapper.style2 ::-webkit-input-placeholder {
-					color: #999999 !important;
-					
-				}
-	
-				.wrapper.style2 :-moz-placeholder {
-					color: #999999 !important;
-				}
-	
-				.wrapper.style2 ::-moz-placeholder {
-					color: #999999 !important;
-				}
-	
-				.wrapper.style2 :-ms-input-placeholder {
-					color: #999999 !important;
-				}
-	
-				.wrapper.style2 .formerize-placeholder {
-					color: #999999 !important;
-				}
-	
-				.wrapper.style2 ul.alt li {
-					border-top-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 header p {
-					color: #999999;
-				}
-	
-				.wrapper.style2 table tbody tr {
-					border-color: rgba(0, 0, 0, 0.15);
-				}
-	
-					.wrapper.style2 table tbody tr:nth-child(2n + 1) {
-						background-color: rgba(0, 0, 0, 0.075);
-					}
-	
-				.wrapper.style2 table th {
-					color: #000;
-				}
-	
-				.wrapper.style2 table thead {
-					border-bottom-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 table tfoot {
-					border-top-color: rgba(0, 0, 0, 0.15);
-				}
-	
-				.wrapper.style2 table.alt tbody tr td {
+
+			.wrapper.style2 .select-wrapper:before {
+				color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 input[type="checkbox"] + label,
+			.wrapper.style2 input[type="radio"] + label {
+				color: #a6a6a6;
+			}
+
+				.wrapper.style2 input[type="checkbox"] + label:before,
+				.wrapper.style2 input[type="radio"] + label:before {
+					background: rgba(0, 0, 0, 0.075);
 					border-color: rgba(0, 0, 0, 0.15);
 				}
 
+			.wrapper.style2 input[type="checkbox"]:checked + label:before,
+			.wrapper.style2 input[type="radio"]:checked + label:before {
+				background-color: #8a4680;
+				border-color: #8a4680;
+				color: #ffffff;
+			}
+
+			.wrapper.style2 input[type="checkbox"]:focus + label:before,
+			.wrapper.style2 input[type="radio"]:focus + label:before {
+				border-color: #8a4680;
+				box-shadow: 0 0 0 1px #8a4680;
+			}
+
+			.wrapper.style2 ::-webkit-input-placeholder {
+				color: #999999 !important;
+				
+			}
+
+			.wrapper.style2 :-moz-placeholder {
+				color: #999999 !important;
+			}
+
+			.wrapper.style2 ::-moz-placeholder {
+				color: #999999 !important;
+			}
+
+			.wrapper.style2 :-ms-input-placeholder {
+				color: #999999 !important;
+			}
+
+			.wrapper.style2 .formerize-placeholder {
+				color: #999999 !important;
+			}
+
+			.wrapper.style2 ul.alt li {
+				border-top-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 header p {
+				color: #999999;
+			}
+
+			.wrapper.style2 table tbody tr {
+				border-color: rgba(0, 0, 0, 0.15);
+			}
+
+				.wrapper.style2 table tbody tr:nth-child(2n + 1) {
+					background-color: rgba(0, 0, 0, 0.075);
+				}
+
+			.wrapper.style2 table th {
+				color: #000;
+			}
+
+			.wrapper.style2 table thead {
+				border-bottom-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 table tfoot {
+				border-top-color: rgba(0, 0, 0, 0.15);
+			}
+
+			.wrapper.style2 table.alt tbody tr td {
+				border-color: rgba(0, 0, 0, 0.15);
+			}
+
+			
 
 		/* .wrapper.style3 {
 			background-color: rgba(0, 0, 0, 0,3);
@@ -4255,6 +4260,7 @@
 				color: white;
 				font-weight: 300px;
 				text-align: center;
+				position: relative;
 			}
 
 				.banner > article h2:after {
@@ -4267,12 +4273,12 @@
 				font-size: 1rem;
 				font-weight: 300;
 				margin: 0;
-				padding-bottom: 1.75rem;
-				letter-spacing: .25rem;
+
 			}
 
 				.banner > article p:after {
 					content: '';
+
 					position: absolute;
 					margin: auto;
 					right: 0;
@@ -4364,7 +4370,7 @@
 			}
 
 			.banner > article h2 {
-				font-size: 3em;
+				font-size: 2em;
 			}
 
 		}
