--- a/assets/css/main_subpage.css
+++ b/assets/css/main_subpage.css
@@ -2090,6 +2090,10 @@
 
 	form {
 		margin: 0 0 2rem 0;
+		padding: 1.5em;
+		background-color: white;
+		opacity: 0.85;
+		flex-direction: column;
 	}
 
 	label {
@@ -2097,6 +2101,7 @@
 		font-size: 0.9rem;
 		font-weight: 700;
 		margin: 0 0 1rem 0;
+		color: white;
 	}
 
 	input[type="text"],
@@ -2111,12 +2116,14 @@
 		border-radius: 2px;
 		border: none;
 		border: solid 1px;
-		color: inherit;
+		color: white;
 		display: block;
 		outline: 0;
 		padding: 0 1rem;
 		text-decoration: none;
 		width: 100%;
+		
+
 	}
 
 		input[type="text"]:invalid,
@@ -2131,6 +2138,10 @@
 		text-decoration: none;
 		display: block;
 		position: relative;
+		background-color: rgba(255, 254, 254, 0.904);
+		
+		
+		
 	}
 
 		.select-wrapper:before {
@@ -2255,7 +2266,7 @@
 	}
 
 	label {
-		color: #555;
+		color: rgba(85, 85, 85, 0.829);
 	}
 
 	input[type="text"],
@@ -2263,8 +2274,8 @@
 	input[type="email"],
 	select,
 	textarea {
-		background: rgba(144, 144, 144, 0.075);
-		border-color: rgba(144, 144, 144, 0.25);
+		background: rgba(102, 102, 102, 0.788);
+		border-color: rgba(144, 144, 144, 0.733);
 	}
 
 		input[type="text"]:focus,
@@ -2277,7 +2288,7 @@
 		}
 
 	.select-wrapper:before {
-		color: rgba(144, 144, 144, 0.25);
+		color: rgba(144, 144, 144, 0.712);
 	}
 
 	input[type="checkbox"] + label,
@@ -2287,8 +2298,8 @@
 
 		input[type="checkbox"] + label:before,
 		input[type="radio"] + label:before {
-			background: rgba(144, 144, 144, 0.075);
-			border-color: rgba(144, 144, 144, 0.25);
+			background: rgba(144, 144, 144, 0.849);
+			border-color: rgba(144, 144, 144, 0.815);
 		}
 
 	input[type="checkbox"]:checked + label:before,
@@ -2323,6 +2334,43 @@
 	.formerize-placeholder {
 		color: #bbb !important;
 	}
+
+
+	#status{
+		width: 90%;
+		max-width: 500px;
+		text-align: center;
+		padding: 10px;
+		margin: 0 auto;
+		border-radius: 8px;
+		
+
+	}
+	#status.success{
+		background-color: rgb(211, 250, 153);
+		animation: status 4s ease forwards;
+	}
+	#status.error{
+		background-color: rgb(250, 129, 92);
+		color: white;
+		animation: status 4s ease forwards;
+	}
+	@keyframes status{
+		0%{
+			opacity: 1;
+			pointer-events: all;
+		}
+		90% {
+			opacity: 1;
+			pointer-events: all;
+		}
+		100%{
+			opacity: 0;
+			pointer-events: none;
+		}
+	}
+
+	
 
 /* Icon */
 
